sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:7: error: reassignment to val
                                                                        aRte=false}}
                                                                            ^